--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -1189,6 +1189,7 @@ spa:
     # value_format: "Format de la valeur monétaire"
     # variety: "Variété"
     # vat_number: "Numéro de TVA intra-communautaire"
+    # vat_subjected: "Vat subjected"
     # vat_submissive: "Soumis à la TVA"
     # virtual: "Virtuel"
     # virtual_quantity: "Stock virtuel"
