--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -232,6 +232,11 @@ arb:
     backend/help: #?
     backend/helps:
       # index: "Aide"
+    backend/incidents:
+      # edit: "Modifier l'incident\_: %{name} (%{nature})"
+      # index: "Incidents"
+      # new: "Nouvel incident"
+      # show: "Incident %{name} (%{nature})"
     backend/incoming_deliveries:
       # confirm: "Confirmer l’arrivée de la livraison"
       # edit: "Modifier l’arrivage: %{number}"
@@ -1118,6 +1123,7 @@ arb:
     # import_backup: "Import de fichier de sauvegarde"
     importation_explanation: "لتأكيد عملية الاستيراد، يجب عليك النقر عليه"
     in_line_create: "اضافة منتج وارد" #?
+    # incidents: "Incidents"
     include_blank: "--- ولا اية منظمة ---"
     income_statement: "حسابات الناتج"
     # incoming_payment_conditions: "Conditions d’encaissement"
