--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -195,6 +195,11 @@ fra:
       index: "Aide"
       # show: "Show backend/help"
       # toggle: "Toggle backend/help"
+    backend/incidents:
+      edit: "Modifier l'incident\_: %{name} (%{nature})"
+      index: "Incidents"
+      new: "Nouvel incident"
+      show: "Incident %{name} (%{nature})"
     backend/incoming_deliveries:
       confirm: "Confirmer l’arrivée de la livraison"
       edit: "Modifier l’arrivage: %{number}"
@@ -610,6 +615,7 @@ fra:
     backend/establishments: "Établissements"
     backend/financial_years: "Exercices comptables"
     # backend/helps: "Backend/helps"
+    # backend/incidents: "Backend/incidents"
     backend/incoming_deliveries: "Livraisons entrantes"
     backend/incoming_delivery_items: "Lignes de livraison entrante"
     backend/incoming_delivery_modes: "Modes de réception d’arrivage"
@@ -1027,6 +1033,7 @@ fra:
     import: "Importer"
     import_backup: "Import de fichier de sauvegarde"
     importation_explanation: "Pour confirmer l’importation, vous devez confirmer en cliquant sur Importer."
+    incidents: "Incidents"
     include_blank: "— Aucune organisation —"
     income_statement: "Comptes de résultats"
     incoming_payment_conditions: "Conditions d’encaissement"
