--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -210,6 +210,11 @@ spa:
     backend/help: #?
     backend/helps:
       # index: "Aide"
+    backend/incidents:
+      # edit: "Modifier l'incident\_: %{name} (%{nature})"
+      # index: "Incidents"
+      # new: "Nouvel incident"
+      # show: "Incident %{name} (%{nature})"
     backend/incoming_deliveries:
       # confirm: "Confirmer l’arrivée de la livraison"
       # edit: "Modifier l’arrivage: %{number}"
@@ -1011,6 +1016,7 @@ spa:
     import: "Importación de un  fichero de salvaguardia"
     # import_backup: "Import de fichier de sauvegarde"
     # importation_explanation: "Pour confirmer l’importation, vous devez confirmer en cliquant sur Importer."
+    # incidents: "Incidents"
     # include_blank: "— Aucune organisation —"
     income_statement: "cuentos de résultos"
     # incoming_payment_conditions: "Conditions d’encaissement"
