--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -20,6 +20,7 @@ spa:
         # work_unit: "Unité d'oeuvre"
       animal:
         # born_at: "Date de naissance"
+        # dead_at: "Date de décès"
         # variety: "Race"
       animal_group:
         # born_at: "Date de création"
@@ -750,6 +751,7 @@ spa:
     # global_credit: "Crédit global"
     # global_debit: "Débit global"
     # godchildren: "Filleul"
+    # gravity: "Gravité"
     # group: "Groupe"
     # groups: "Groupes"
     # has_downpayment: "A un acompte"
@@ -764,6 +766,7 @@ spa:
     # importance: "Importance"
     # in_cash: "En espèce"
     # in_name: "Abréviation incluse dans le nom de la personne"
+    # incidents: "Incidents"
     # included: "Incluse"
     # incoming_deliveries: "Livraisons entrantes"
     # incoming_delivery_items: "Lignes de livraisons entrantes"
@@ -895,7 +898,7 @@ spa:
     # number_increment: "Incrément"
     # number_start: "Début de la numération"
     # observations: "Observations"
-    # observed_at: "Observed at"
+    # observed_at: "Observé à"
     # of_company: "Dossier basé sur cette entreprise"
     # office: "Bureau/Atelier"
     # old_password: "Mot de passe actuel"
@@ -954,7 +957,9 @@ spa:
     # payments_count: "Nb. encaissements"
     # payments_to_deposit: "Encaissements à encaisser"
     # payments_to_deposit_accounts: "Comptes des encaissements à encaisser"
+    # percentage: "Pourcentage"
     # period: "Périodicité"
+    # person: "Personne"
     # phones: "Téléphones"
     # physical: "Personne physique"
     # picture: "Photo"
@@ -979,6 +984,8 @@ spa:
     # prices: "Prix"
     # printed_at: "Imprimé le"
     # printed_on: "Datée du"
+    # priority: "Priorité"
+    # procedures: "Procédures"
     # process: "Process"
     # producer: "Producteur"
     # product: "Produit"
@@ -1134,7 +1141,7 @@ spa:
     # suspended: "Suspendu"
     # symbol: "Symbole"
     # symmetric: "Symétrique"
-    # target: "Parcelle"
+    # target: "Cible"
     # target_quantity: "Quantité cible"
     # target_type: "Type de cible"
     # tax: "Taxe"
