--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -178,7 +178,7 @@ spa:
       sale_item:
         # amount: "Montant TTC"
         # label: "Produit"
-        # price: "Produit tarifé"
+        # price: "Prix"
       sale_line: #?
       sale_nature:
         # downpayment: "Avec acompte"
