Makes "affairs" working at very least

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -32,6 +32,7 @@ arb:
       # new: "Nouvelle répartition analytique"
       # show: "Répartition %{id}"
     backend/activity_watchings: #?
+    backend/affairs: #?
     backend/animal_groups:
       # edit: "Modifier le groupe d'animaux\_: %{name}"
       # index: "Groupes d'animaux"
@@ -812,6 +813,7 @@ arb:
     # add_diagnostic: "Ajouter un diagnostic"
     # add_email: "Ajouter une adresse e-mail"
     # add_fax: "Ajouter un n° de fax"
+    # add_item: "Ajouter un élément"
     # add_mail: "Ajouter une adresse postale"
     # add_mobile: "Ajouter un n° de portable"
     # add_new_record: "Ajouter un nouveau enregistrement"
@@ -1153,6 +1155,7 @@ arb:
     invoiced_amount: "قيمة الفاتورة"
     # invoices_only: "Utiliser seulement les factures"
     # is: "Est"
+    # items: "Éléments"
     journal: "دفتراليومية"
     journal_detail: "اغلق في %{closed_on}"
     journal_entries: "المدخالات"
