--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -28,6 +28,10 @@ fra:
       # index: "Index backend/activity watching"
       # new: "New backend/activity watching"
       # show: "Show backend/activity watching"
+    backend/affairs:
+      # attach: "Attach backend/affair"
+      # detach: "Detach backend/affair"
+      select: "Ajouter une transaction"
     backend/animal_groups:
       edit: "Modifier le groupe d'animaux\_: %{name}"
       index: "Groupes d'animaux"
@@ -749,6 +753,7 @@ fra:
     active_sum: "Total actifs"
     activity: "Activités"
     add: "Ajouter"
+    attach_deal: "Ajouter une transaction"
     add_choice: "Ajouter un choix"
     add_condition: "Ajouter la condition"
     add_conditions: "Ajoutez des conditions"
@@ -756,6 +761,7 @@ fra:
     add_diagnostic: "Ajouter un diagnostic"
     add_email: "Ajouter une adresse e-mail"
     add_fax: "Ajouter un n° de fax"
+    add_item: "Ajouter un élément"
     add_mail: "Ajouter une adresse postale"
     add_mobile: "Ajouter un n° de portable"
     add_new_record: "Ajouter un nouveau enregistrement"
@@ -1060,6 +1066,7 @@ fra:
     invoiced_amount: "Montant facturé"
     invoices_only: "Utiliser seulement les factures"
     is: "Est"
+    items: "Éléments"
     journal: "Journal"
     journal_detail: "Cloturé au %{closed_on}"
     journal_entries: "Écritures"
