--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -32,6 +32,7 @@ spa:
       # new: "Nouvelle répartition analytique"
       # show: "Répartition %{id}"
     backend/activity_watchings: #?
+    backend/affairs: #?
     backend/animal_groups:
       # edit: "Modifier le groupe d'animaux\_: %{name}"
       # index: "Groupes d'animaux"
@@ -727,6 +728,7 @@ spa:
     # add_diagnostic: "Ajouter un diagnostic"
     # add_email: "Ajouter une adresse e-mail"
     # add_fax: "Ajouter un n° de fax"
+    # add_item: "Ajouter un élément"
     # add_mail: "Ajouter une adresse postale"
     # add_mobile: "Ajouter un n° de portable"
     # add_new_record: "Ajouter un nouveau enregistrement"
@@ -1044,6 +1046,7 @@ spa:
     # invoiced_amount: "Montant facturé"
     # invoices_only: "Utiliser seulement les factures"
     # is: "Est"
+    # items: "Éléments"
     journal: "Periodico"
     journal_detail: "Cerrado al %{fecha de cerrado}"
     journal_entries: "Escrituras"
