--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -25,7 +25,8 @@ eng:
       # new: "Nouvelle répartition analytique"
       # show: "Répartition %{id}"
     backend/activity_watchings: #?
-    backend/affairs: #?
+    backend/affairs:
+      # select: "Ajouter une transaction"
     backend/animal_groups:
       # edit: "Modifier le groupe d'animaux\_: %{name}"
       # index: "Groupes d'animaux"
@@ -726,6 +727,7 @@ eng:
     # add_x: "Ajouter «\_%{x}\_»"
     # add_x_html: "Ajouter «\_%{x}\_»"
     address: "Address"
+    # affair: "Affaire"
     all: "All"
     all_accounts: "All accounts"
     all_areas: "All postal areas"
@@ -762,6 +764,7 @@ eng:
     # assimilated_tax: "Taxes assimilées calculées sur annexe n°3310A"
     attach_an_incoming_payment_to_expense: "Attach an incoming payment to %{type} %{number}"
     attach_an_outgoing_payment_to_expense: "Attach an outgoing payment to %{type} %{number}"
+    # attach_deal: "Ajouter une transaction"
     attachment: "Attachment"
     attorney: "Attorney"
     available_columns: "Available columns: %{columns}"
