--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -1245,6 +1245,7 @@ fra:
     vat_subjected: "Vat subjected"
     vat_submissive: "Soumis à la TVA" #?
     # verb: "Verb"
+    # version: "Version"
     virtual: "Virtuel" #?
     virtual_quantity: "Stock virtuel"
     waiting_deliveries: "Livraisons en attente"
