--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -379,6 +379,7 @@ fra:
       primary_zone: "Zone primaire"
       procedure: "Procédure"
       procedure_nature: "Type de procédure" #?
+      # procedure_variable: "Procedure variable"
       product: "Produits"
       product_ability: "Compétence" #?
       product_group: "Groupe de produit"
@@ -1014,6 +1015,7 @@ fra:
     printed_at: "Imprimé le" #?
     printed_on: "Datée du"
     priority: "Priorité"
+    # procedure: "Procedure"
     procedures: "Procédures"
     process: "Process"
     producer: "Producteur"
@@ -1240,6 +1242,7 @@ fra:
     uses: "Matériels utilisés"
     value: "Valeur"
     value_format: "Format de la valeur monétaire" #?
+    # variables: "Variables"
     variety: "Variété"
     vat_number: "Numéro de TVA intra-communautaire"
     vat_subjected: "Vat subjected"
