Adds a procedure reader/flattener/spliter for a better use

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1604,6 +1604,7 @@ arb:
     printed_at: "طبعت في"
     printed_on: "طبع يوم"
     # priority: "Priorité"
+    # procedure: "Procedure"
     # procedures: "Procédures"
     # process: "Process"
     producer: "المنتج"
