--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -986,6 +986,7 @@ jpn:
     # printed_at: "Imprimé le"
     # printed_on: "Datée du"
     # priority: "Priorité"
+    # procedure: "Procedure"
     # procedures: "Procédures"
     # process: "Process"
     # producer: "Producteur"
